# pre-requisite

./: README.md  pyproject.toml
fastapi-intro/: pyproject.toml
fastapi-intro/src/: app.py
fastapi-intro/tests/: api_test.py
llm-prompt-eng/: bad-prompts.md  main.py  pyproject.toml
llm-prompt-eng/src/: first-call.py  token-counter.py
prequisite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
py-fundamental-async/: .env.dev  api-caller.py  asyncio-api-caller.py  cli.py  main.py  pyproject.toml
sql-psql/: Dockerfile  db.py  docker-compose.yaml  logs.txt  main.py  postgres  pyproject.toml
sql-psql/database/: queries.sql  schema.sql
sql-psql/src/: app.py
structured-project/: .gitignore  README.md  main.py  pyproject.toml
