[project]
name = "prequisite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.1",
    "requests>=2.34.2",
    "typer>=0.26.8",
]

[project.scripts]
my-tool = "main:app"
